--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,11 +6,11 @@ set -sg escape-time 10
 
 set -g default-terminal "screen-256color"
 
-set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | %d-%b-%y %H:%M '
+set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | %a %d-%b %H:%M '
 
 set-window-option -g window-status-current-style bg=red
 
-set -g status-bg '#1F2A36'
+set -g status-bg default
 
 set -g status-fg white
 
@@ -38,7 +38,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'Morantron/tmux-fingers'
 
-# set-option -g status-position top
+set-option -g status-position top
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -92,10 +92,10 @@ unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # color status bar
-set -g status-style bg=colour236,fg=white
+set -g status-style bg='#191919',fg=white
 
 # highlight current window
-set-window-option -g window-status-current-style fg=white,bg='#1F2A36'
+set-window-option -g window-status-current-style fg=white,bg='#191919'
 
 # set color of active pane
 # set -g pane-border-style fg=colour235
