--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,7 +38,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'Morantron/tmux-fingers'
 
-set-option -g status-position top
+set-option -g status-position bottom
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
