vim: add vim camelcase

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@ set -sg escape-time 10
 
 set -g default-terminal "screen-256color"
 
-set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | %a %d-%b %H:%M '
+set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | #H | %a %d-%b %H:%M '
 
 set-window-option -g window-status-current-style bg=red
 
