--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,7 @@ set -g status-fg white
 setw -g pane-base-index 1
 
 set -g status-left-length 50
+set -g status-right-length 100
 
 set -g renumber-windows on    # renumber windows when a window is closed
 
