--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,48 +1,52 @@
+# Default value in tmux >= 3.2
+TMUX_FZF_OPTIONS="-d 30%"
+
+set-option -g mouse on
+
+set-option -g default-shell /bin/zsh
+
 # start window index at 1
 set -g base-index 1
-setw -g mode-keys vi
-
-set -sg escape-time 10
-
-set -g default-terminal "screen-256color"
-
-set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | #H | %a %d-%b %H:%M '
-
-set-window-option -g window-status-current-style bg=red
-
-set -g status-bg default
-
-set -g status-fg white
 
 # start pane index at 1
 setw -g pane-base-index 1
 
+# vim keybinding
+setw -g mode-keys vi
+
+set -g default-terminal "screen-256color"
+
+set -sg escape-time 10
+
+set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | #H | %a %d-%b %H:%M'
+
 set -g status-left-length 50
+
 set -g status-right-length 100
 
-set -g renumber-windows on    # renumber windows when a window is closed
+# renumber windows when a window is closed
+set -g renumber-windows on
 
-set -g set-titles on          # set terminal title
+# set terminal title
+set -g set-titles on
 
-bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
+# color status bar
+set -g status-style bg='#191919',fg=white
 
+set-option -g status-position bottom
+
+###############
+### mapping ###
+###############
+
+# create split window with current pwd
 unbind %
 bind '\' split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'Morantron/tmux-fingers'
+bind-key c command-prompt -p
 
-set-option -g status-position bottom
-
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
@@ -50,20 +54,10 @@ bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
 bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
 bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 
-# enter copy-mode
-bind Enter copy-mode
-bind -n M-Enter copy-mode
-
 bind-key -T copy-mode-vi 'M-h' select-pane -L
 bind-key -T copy-mode-vi 'M-j' select-pane -D
 bind-key -T copy-mode-vi 'M-k' select-pane -U
 bind-key -T copy-mode-vi 'M-l' select-pane -R
-
-# pane configuration keys
-# bind-key -r > resize-pane -R 15
-# bind-key -r < resize-pane -L 15
-# bind-key -r D resize-pane -D 2
-# bind-key -r U resize-pane -U 2
 
 # Switch windows using Alt-<number>.
 bind-key -n M-1 select-window -t 1
@@ -76,36 +70,31 @@ bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 
+# vim like in copy mode
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
-# Default value in tmux >= 3.2
-TMUX_FZF_OPTIONS="-d 30%"
-
-set-option -g mouse on
-
-set-option -g default-shell /bin/zsh
-
 # force a reload of the config file
 unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# color status bar
-set -g status-style bg='#191919',fg=white
-
-# highlight current window
-set-window-option -g window-status-current-style fg=white,bg='#191919'
-
-# set color of active pane
-# set -g pane-border-style fg=colour235
-# set -g pane-active-border-style fg=green
+bind r source-file ~/.tmux.conf \; display "config reloaded"
 
 set-option -g pane-active-border-style fg=colour244
 set-option -g pane-border-style fg=colour242
 
-# Restore tmux environment after system restart.
-# run-shell ~/code/git/tmux-resurrect/resurrect.tmux
+##############
+### Plugin ###
+##############
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'Morantron/tmux-fingers'
+
+# Automatically restored when tmux is started
+set -g @continuum-restore 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
