tmux: use fzf to kill session

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,6 +83,11 @@ bind r source-file ~/.tmux.conf \; display "config reloaded"
 set-option -g pane-active-border-style fg=colour244
 set-option -g pane-border-style fg=colour242
 
+bind k display-popup -E "\
+    tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
+    fzf --reverse -m --header=kill-session |\
+    xargs -I {} tmux kill-session -t {}"
+
 ##############
 ### Plugin ###
 ##############
