alacritty: change padding and window mode

--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -24,8 +24,8 @@ window:
   # Units are physical pixels; this is not DPI aware.
   # (change requires restart)
   padding:
-    x: 2
-    y: 0
+    x: 0
+    y: 5
 
   # Window decorations
   #
@@ -54,7 +54,7 @@ window:
   #
   # Values for `startup_mode` (macOS only):
   #   - SimpleFullscreen
-  startup_mode: SimpleFullscreen
+  startup_mode: Maximized
 
     # Background opacity
   opacity: 1
