--- a/.tmux.conf
+++ b/.tmux.conf
@@ -98,8 +98,16 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'Morantron/tmux-fingers'
+set -g @plugin 'omerxx/tmux-sessionx'
 
 # Automatically restored when tmux is started
 set -g @continuum-restore 'on'
+
+# tmux-sessionx
+set -g @sessionx-bind 's'
+set -g @sessionx-x-path '/Users/kanatsanan.j/Documents/datawowio'
+set -g @sessionx-preview-enabled 'false'
+set -g @sessionx-window-height '50%'
+set -g @sessionx-window-width '50%'
 
 run '~/.tmux/plugins/tpm/tpm'
