tmux: tmux sessionizer (Thanks to ThePrimeagen)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,6 +47,12 @@ bind - split-window -v -c "#{pane_current_path}"
 
 bind-key c command-prompt -p
 
+# Hide preview on session switch
+bind-key s choose-tree -ZsN
+bind-key w choose-tree -ZwN
+
+bind-key -r f run-shell "tmux neww ~/scripts/tmux-sessionizer"
+
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
