alacritty: hide cursor when typing

--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -1104,7 +1104,7 @@ key = "Return"
 mods = "Command"
 
 [mouse]
-hide_when_typing = true
+hide_when_typing = false
 
 [[mouse.bindings]]
 action = "PasteSelection"
