--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -49,7 +49,7 @@ shape = "Block"
 TERM = "xterm-256color"
 
 [font]
-size = 13.5
+size = 12.5
 
 [font.bold]
 family = "JetBrains Mono"
@@ -1117,7 +1117,7 @@ semantic_escape_chars = ",│`|:\"' ()[]{}<>"
 decorations = "none"
 opacity = 1
 option_as_alt = "None"
-startup_mode = "Maximized"
+startup_mode = "SimpleFullscreen"
 
 [window.dimensions]
 columns = 160
@@ -1125,4 +1125,4 @@ lines = 48
 
 [window.padding]
 x = 3
-y = 5
+y = 0
