tmux: binding lazygit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -87,6 +87,8 @@ bind r source-file ~/.tmux.conf \; display "config reloaded"
 set-option -g pane-active-border-style fg=colour244
 set-option -g pane-border-style fg=colour242
 
+bind -r g display-popup -d '#{pane_current_path}' -w80% -h80% -E lazygit
+
 bind k display-popup -E "\
     tmux list-sessions -F '#{#{session_name}}' |\
     fzf --reverse -m --header=kill-session |\
