vim: tweak statusline a bit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,7 @@ set -g default-terminal "screen-256color"
 
 set -sg escape-time 10
 
-set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | #H | %a %d-%b %H:%M'
+set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | %a %d-%b %H:%M'
 
 set -g status-left-length 50
 
