--- a/.gitconfig
+++ b/.gitconfig
@@ -9,7 +9,7 @@
 [alias]
 	lg = log --all --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset%n' --abbrev-commit --date=relative --branches
 [core]
-	excludesfile = ~/.gitignore_global
+	excludesfile = /Users/kanatsananj/.gitignore_global
   editor = nvim
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
