--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,7 @@ set -g default-terminal "screen-256color"
 
 set -sg escape-time 10
 
-set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | %a %d-%b %H:%M'
+set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | #h | %a %d-%b %H:%M'
 
 set -g status-left-length 50
 
@@ -104,16 +104,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'Morantron/tmux-fingers'
-# set -g @plugin 'omerxx/tmux-sessionx'
 
 # Automatically restored when tmux is started
 set -g @continuum-restore 'on'
-
-# tmux-sessionx
-# set -g @sessionx-bind 's'
-# set -g @sessionx-x-path '/Users/kanatsanan.j/Documents/datawowio'
-# set -g @sessionx-preview-enabled 'false'
-# set -g @sessionx-window-height '50%'
-# set -g @sessionx-window-width '50%'
 
 run '~/.tmux/plugins/tpm/tpm'
