--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -1103,6 +1103,26 @@ action = "ToggleSimpleFullscreen"
 key = "Return"
 mods = "Command"
 
+[[keyboard.bindings]]
+key = "1"
+mods = "Control"
+chars = "\u0014\u0031"
+
+[[keyboard.bindings]]
+key = "2"
+mods = "Control"
+chars = "\u0014\u0032"
+
+[[keyboard.bindings]]
+key = "3"
+mods = "Control"
+chars = "\u0014\u0033"
+
+[[keyboard.bindings]]
+key = "4"
+mods = "Control"
+chars = "\u0014\u0034"
+
 [mouse]
 hide_when_typing = false
 
