--- a/.config/docker-setup/docker-compose.yaml
+++ b/.config/docker-setup/docker-compose.yaml
@@ -17,6 +17,14 @@ services:
     ports:
       - 6379:6379
     restart: always
+  mongodb:
+    image: mongo:4.0.14
+    volumes:
+      - /data/db
+    command: --smallfiles
+    ports:
+      - 27017:27017
+    restart: always
 
 volumes:
   pgvol:
