tmux: open jira and PR from tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,6 +50,7 @@ bind-key s choose-tree -ZsN
 bind-key w choose-tree -ZwN
 
 bind-key -r f run-shell "tmux neww ~/scripts/tmux-sessionizer"
+bind-key j run-shell "~/scripts/jira"
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -87,7 +88,8 @@ bind r source-file ~/.tmux.conf \; display "config reloaded"
 set-option -g pane-active-border-style fg=colour244
 set-option -g pane-border-style fg=colour242
 
-bind -r g display-popup -d '#{pane_current_path}' -w80% -h80% -E lazygit
+bind -r g run-shell "~/dotfiles/scripts/branch"
+# bind -r g display-popup -d '#{pane_current_path}' -w80% -h80% -E lazygit
 
 bind k display-popup -E "\
     tmux list-sessions -F '#{#{session_name}}' |\
