misc: lot of things bruh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,7 +16,7 @@ setw -g mode-keys vi
 
 set -g default-terminal "screen-256color"
 
-set -sg escape-time 10
+set -sg escape-time 0
 
 set -g status-right 'branch: #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | %a %d-%b %H:%M'
 
@@ -88,7 +88,7 @@ bind r source-file ~/.tmux.conf \; display "config reloaded"
 set-option -g pane-active-border-style fg=colour244
 set-option -g pane-border-style fg=colour242
 
-bind -r g run-shell "~/dotfiles/scripts/branch"
+bind -r g run-shell "~/scripts/branch"
 # bind -r g display-popup -d '#{pane_current_path}' -w80% -h80% -E lazygit
 
 bind k display-popup -E "\
