--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -3,41 +3,42 @@ live_config_reload = true
 [colors]
 draw_bold_text_with_bright_colors = false
 
-[[colors.indexed_colors]]
-color = "#b6927b"
-index = 16
+# kanagawa
+# [[colors.indexed_colors]]
+# color = "#b6927b"
+# index = 16
 
-[[colors.indexed_colors]]
-color = "#b98d7b"
-index = 17
+# [[colors.indexed_colors]]
+# color = "#b98d7b"
+# index = 17
 
-[colors.bright]
-black = "#a6a69c"
-blue = "#7FB4CA"
-cyan = "#7AA89F"
-green = "#87a987"
-magenta = "#938AA9"
-red = "#E46876"
-white = "#c5c9c5"
-yellow = "#E6C384"
+# [colors.bright]
+# black = "#a6a69c"
+# blue = "#7FB4CA"
+# cyan = "#7AA89F"
+# green = "#87a987"
+# magenta = "#938AA9"
+# red = "#E46876"
+# white = "#c5c9c5"
+# yellow = "#E6C384"
 
-[colors.normal]
-black = "#0d0c0c"
-blue = "#8ba4b0"
-cyan = "#8ea4a2"
-green = "#8a9a7b"
-magenta = "#a292a3"
-red = "#c4746e"
-white = "#C8C093"
-yellow = "#c4b28a"
+# [colors.normal]
+# black = "#0d0c0c"
+# blue = "#8ba4b0"
+# cyan = "#8ea4a2"
+# green = "#8a9a7b"
+# magenta = "#a292a3"
+# red = "#c4746e"
+# white = "#C8C093"
+# yellow = "#c4b28a"
 
-[colors.primary]
-background = "#181616"
-foreground = "#c5c9c5"
+# [colors.primary]
+# background = "#181616"
+# foreground = "#c5c9c5"
 
-[colors.selection]
-background = "#2D4F67"
-foreground = "#C8C093"
+# [colors.selection]
+# background = "#2D4F67"
+# foreground = "#C8C093"
 
 [cursor]
 unfocused_hollow = false
@@ -49,7 +50,7 @@ shape = "Block"
 TERM = "xterm-256color"
 
 [font]
-size = 13.5
+size = 13
 
 [font.bold]
 family = "JetBrains Mono"
