--- a/.tmux.conf
+++ b/.tmux.conf
@@ -102,6 +102,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'Morantron/tmux-fingers'
 
 # Automatically restored when tmux is started
