a lot of things

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
-# Default value in tmux >= 3.2
 TMUX_FZF_OPTIONS="-d 30%"
 
 set-option -g mouse on
 
+# use zsh as default shell
 set-option -g default-shell /bin/zsh
 
 # start window index at 1
@@ -14,11 +14,9 @@ setw -g pane-base-index 1
 # vim keybinding
 setw -g mode-keys vi
 
-set -g default-terminal "screen-256color"
-
 set -sg escape-time 0
 
-set -g status-right 'branch: #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | %a %d-%b %H:%M'
+set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | %m-%d %H:%M'
 
 set -g status-left-length 50
 
@@ -33,8 +31,6 @@ set -g set-titles on
 # color status bar
 set -g status-style bg='#090909',fg=white
 
-set-option -g status-position bottom
-
 ###############
 ### mapping ###
 ###############
@@ -44,13 +40,6 @@ unbind %
 bind '\' split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
-
-# Hide preview on session switch
-bind-key s choose-tree -ZsN
-bind-key w choose-tree -ZwN
-
-bind-key -r f run-shell "tmux neww ~/scripts/tmux-sessionizer"
-bind-key j run-shell "~/scripts/jira"
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -79,7 +68,6 @@ bind-key -n M-9 select-window -t 9
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind P paste-buffer
-# bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # force a reload of the config file
 unbind r
@@ -99,7 +87,6 @@ bind k display-popup -E "\
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'Morantron/tmux-fingers'
