--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,7 +16,11 @@ setw -g mode-keys vi
 
 set -sg escape-time 0
 
-set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | %m-%d %H:%M'
+wg_lang="#{?#(xset -q | grep LED | cut -c63),[RU],[EN]}"
+
+set -g status-right "#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | #(defaults read ~/Library/Preferences/com.apple.HIToolbox.plist AppleCurrentKeyboardLayoutInputSourceID | awk -F. '{print $4}') | %m-%d %H:%M"
+
+set -g status-interval 1
 
 set -g status-left-length 50
 
@@ -69,6 +73,8 @@ bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind P paste-buffer
 
+bind-key s choose-tree -ZsN
+
 # force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf \; display "config reloaded"
@@ -87,11 +93,8 @@ bind k display-popup -E "\
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'Morantron/tmux-fingers'
-
-# Automatically restored when tmux is started
-set -g @continuum-restore 'on'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 run '~/.tmux/plugins/tpm/tpm'
