tmux: remove lang from status line

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,9 +16,7 @@ setw -g mode-keys vi
 
 set -sg escape-time 0
 
-wg_lang="#{?#(xset -q | grep LED | cut -c63),[RU],[EN]}"
-
-set -g status-right "#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | #(defaults read ~/Library/Preferences/com.apple.HIToolbox.plist AppleCurrentKeyboardLayoutInputSourceID | awk -F. '{print $4}') | %m-%d %H:%M"
+set -g status-right "#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | %d %b %H:%M"
 
 set -g status-interval 1
 
