vim: use cmd c to copy

--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -1087,6 +1087,11 @@ key = "4"
 mods = "Control"
 chars = "\u0014\u0034"
 
+[[keyboard.bindings]]
+key = "c"
+mods = "Command"
+chars = "++"
+
 [mouse]
 hide_when_typing = false
 
@@ -1098,7 +1103,7 @@ mouse = "Middle"
 semantic_escape_chars = ",│`|:\"' ()[]{}<>"
 
 [window]
-decorations = "none"
+decorations = "Full"
 opacity = 1
 option_as_alt = "None"
 startup_mode = "Maximized"
