--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,7 +16,7 @@ setw -g mode-keys vi
 
 set -sg escape-time 0
 
-set -g status-right "#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | %d %b %H:%M"
+set -g status-right "branch: #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | %d-%b %H:%M"
 
 set -g status-interval 1
 
@@ -54,6 +54,9 @@ bind-key -T copy-mode-vi 'M-h' select-pane -L
 bind-key -T copy-mode-vi 'M-j' select-pane -D
 bind-key -T copy-mode-vi 'M-k' select-pane -U
 bind-key -T copy-mode-vi 'M-l' select-pane -R
+
+bind-key ! break-pane -d -n _hidden_pane
+bind-key @ run-shell "tmux join-pane -s $.1 && tmux resize-pane -y $(($(tmux display -p '#{pane_height}') * 30 / 100))"
 
 # Switch windows using Alt-<number>.
 bind-key -n M-1 select-window -t 1
