--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,13 @@ set -g base-index 1
 # start pane index at 1
 setw -g pane-base-index 1
 
+set -g status-position bottom
+set -g status-bg colour234
+set -g status-fg colour137
+
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
 # vim keybinding
 setw -g mode-keys vi
 
@@ -31,7 +38,7 @@ set -g renumber-windows on
 set -g set-titles on
 
 # color status bar
-set -g status-style bg='#090909',fg=white
+# set -g status-style bg='#090909',fg=white
 
 ###############
 ### mapping ###
